[example] Replace CRA with simple manual setup

--- a/examples/apollo-watch-fragments/public/index.html
+++ b/examples/apollo-watch-fragments/public/index.html
@@ -17,5 +17,6 @@
       <p>Created by <a href="http://todomvc.com">you</a></p>
       <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
+    <script src="bundle.js"></script>
   </body>
 </html>
