--- a/examples/apollo-watch-fragments/public/index.html
+++ b/examples/apollo-watch-fragments/public/index.html
@@ -6,6 +6,7 @@
     <title>Template • TodoMVC</title>
     <link rel="stylesheet" href="base.css" />
     <link rel="stylesheet" href="index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/react-render-tracker"></script>
   </head>
   <body>
     <div id="root"></div>
