--- a/examples/apollo-watch-fragments/public/index.html
+++ b/examples/apollo-watch-fragments/public/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="base.css" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="loading-spinner.css" />
-    <script src="https://cdn.jsdelivr.net/npm/react-render-tracker"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/react-render-tracker"
+      data-config="
+        openSourceLoc: {
+          pattern: 'vscode://file/[file]'
+        }
+      "
+    ></script>
   </head>
   <body>
     <div id="root"></div>
