--- a/examples/apollo-watch-fragments/public/index.html
+++ b/examples/apollo-watch-fragments/public/index.html
@@ -10,9 +10,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/react-render-tracker"
       data-config="
-        openSourceLoc: {
-          pattern: 'vscode://file/[file]'
-        }
+        openSourceLoc: 'vscode://file/[file]'
       "
     ></script>
   </head>
