--- a/examples/apollo-watch-fragments/public/index.html
+++ b/examples/apollo-watch-fragments/public/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="loading-spinner.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/react-render-tracker"
-      data-config="
-        openSourceLoc: 'vscode://file/[file]'
-      "
+      data-config="openSourceLoc: 'vscode://file/[file]'"
     ></script>
   </head>
   <body>
